Use java 17 to run the build, fix existing errors