@@ -10,12 +10,6 @@ if (hasProperty('buildScan')) {
     }
 }
 
-tasks.withType(JavaCompile) {
-    options.forkOptions.jvmArgs.addAll([
-        '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
-    ])
-}
-
 ext.resolveProperty = { key, defaultValue = "unknown" ->
     return project.findProperty(key) ?: System.getenv(key) ?: defaultValue
 }
@@ -49,6 +43,11 @@ subprojects {
     repositories {
         mavenCentral()
         maven { url "https://jitpack.io" }
+    }
+
+    checkstyle {
+        toolVersion = "8.41"
+        configFile = file("$rootDir/config/checkstyle/checkstyle.xml")
     }
 
     jar {
